Fixed image/text overlap in markdown

--- a/styles/githubDarkStyle.user.css
+++ b/styles/githubDarkStyle.user.css
@@ -528,7 +528,7 @@
     border: none;
   }
   .markdown-body img {
-    background-color: transparent !important;
+    background-color: var(--box-color) !important;
     border-radius: 10px;
   }
   #js-pjax-container > div.container-xl.px-3.px-md-4.px-lg-5 > div > div.flex-shrink-0.col-12.col-md-9.mb-4.mb-md-0 > div > div > div.Box.mt-4 > div > article > p > a > img, #js-pjax-container > div.container-xl.px-3.px-md-4.px-lg-5 > div > div.flex-shrink-0.col-12.col-md-9.mb-4.mb-md-0 > div > div > div.Box.mt-4 > div > article > a > p > img {
